# soar

./: .dockerignore  .env.docker.example  .env.example  .gitattributes  .gitignore  .mcp.json.example  .pre-commit-config.yaml  BACKUP-QUICKSTART.md  BEAST-Integration.md  CI.md  CLAUDE.md  COMPACT_INSTRUCTIONS.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  DB-BACKUPS.md  DIESEL_MIGRATION.md  DOCKER-DEVELOPMENT.md  Dockerfile  Dockerfile.dev  FANET_INVESTIGATION_SUMMARY.md  GRAFANA_DASHBOARD_UPDATES.md  INGEST-MIGRATION.md  METRICS.md  MIGRATION_NOTES.md  PERFORMANCE-FIX-SUMMARY.md  PULL_DATA_METRICS.md  README.md  REFACTOR_TOO_MANY_ARGS.md  STATIC_LINKING.md  TIMESCALEDB_MIGRATION_PLAN.md  TODO.md  backup-env.example  build-frontend  build.rs  check-migration-needed.sh  clippy-fast.sh  deduplicate-clubs  deploy  diesel-guard.toml  (+42 more)
.cargo/: audit.toml  config.toml
.config/: nextest.toml
.github/: COPILOT-IMPLEMENTATION-SUMMARY.md  COPILOT-RECOMMENDATIONS.md  COPILOT-SETUP-COMPLETE.md  copilot-instructions.md  copilot-setup-steps.yml  dependabot.yml  postgis-partman.Dockerfile  postgis-timescaledb.Dockerfile  soar-ci.Dockerfile  timescaledb.gpg
.sqlx/: query-05492453c61608086870701b4ac5bc02273beb3538c1af033059954e8e421607.json  query-0617ad009fc832dc3e68e29055990d8027afd7ad0b444aa5a534c067103fa0bd.json  query-0a215b36c1a166c10706dd2278b3c6de674a91ad8d3beac54ed82bb5e9f0ef97.json  query-0b237cb932c239df6c0f3bad29ec7e23d1bdf469ff6d10d8c64902985c8bbf1b.json  query-0cd152606057b01a2cf203837912b2bb59032ea277a7728830923348d1738568.json  query-0d32ce3aac22ca58b58624e834d287ad3fafd66ec2629863e01be1e5cd925954.json  query-160deafa52f25abb5bce6efdf818ae109281ea6af92cd67f75b06e5cd01c6038.json  query-1d9bf9ec76dfb257d3010c93c15f832073463dc3ab439cf63d50dd14eba9123f.json  query-1e7d07bf25a39d6bf83e5dc5dfa56fcb337b423cdda878e1afae32049c493db2.json  query-1fcf64c0b4772821229c7b145a5e6f230819bdbc2b1c82fa887360cd39e22660.json  query-22ef5cd2953bb8b6cec3b6ccd53cbd054564e4aae15cdf40cc71eccd2dc8efda.json  query-26934f531255ddddcf3f0dc9fa96a8fea5df2a30ec2ee39bb81d6f7536da6f7e.json  query-28f807c1ae9cc1a47577429891932a98929227672973be7e02d5ee3dc6188b1f.json  query-2c1bc80d5665fd22da58b4864838a75920da4096f8dab4d2e55c3f7a5fe50920.json  query-2eef2cb8630c03897d9f172ab80a3297a639e7adc2c514de7a1a8898c1422a7c.json  query-2feaf810bd76b2f28e972c975f1edc95e8878e6ce29a51758f151b08a6954eee.json  query-2fec19abcf9127e82a2d50cc3e8312a6f5969eca461a021d1cc4c0e130609aeb.json  query-3034ae0aa9b527eb0540248b65f91d730b736febbaa210f80c61935ac1d9ac24.json  query-3067ca1999315d4e46242c04475ce56edd03fc5d9172ad34ee4a2ed1237b1843.json  query-339f11e442a9eb2e7540ebf72b980a524f723ed543a3e89eadfcaab0b13369b4.json  query-35f4bf267760b34812e65fa190e3ce64b75729c2c675ca9ea14e04a74964436b.json  query-36cf9ee7b7f0e6611fc1f978697ee9e43f329ee9b59d8036309e1af6e287ba8c.json  query-3bacf1ee105874de9eee22f841029e897370e5a3bdd3d66ca7df69e849f05e4c.json  query-3bbe81b09898932ea731f2e18b124134583df6ce0fa2a413d318537c64927a19.json  query-3c385d65727debe557425942182d3cb0866f32cc2b5b8cb9f9590ce43f92c3bc.json  query-3ca907cd9bcfd06a8b4dcccb2e5b04d69c803a81c06db1411eb7b7cbbad79498.json  query-425ab373751bbd68e2d0c7e79b05f7f16afbba462241c5d2faa07fbd7982a2a2.json  query-44d3a6bbd2f8c888824bfbcb5ab378e576487622ba23c07e6d6d1be0a7794b58.json  query-45ca31262cf80369e267eaa04e61e98dd0a4c9b50d642ee3249c6fe71fe725a2.json  query-464e76935e80f489e0cae9a3e8e8342f277210f486abc12fcd24f1fdf2eff3fa.json  query-4a0066fbcefd0848602af7670bc11616a4ed8d9de8dbe52c62be3829aee83da3.json  query-4a5c90aae1b58684a45ac8af71f850ef86219cae012a5ee0600b6f6353aff636.json  query-4a8f1d5fd2e7a623aafea4d9c1f7b594c32a953ec87bae011889cf11fe83c5d9.json  query-4cfe575372b1857ee29b06c0f359623c546675b5b096a01f698ca09761923abe.json  query-50d80e45182587e1202c5d2dbf53dbfd585440a85242b7e3082b7202534f2c1d.json  query-56afd70b7aa4614b8f98151c64e345fa8f48b67d2a5e4f393e37998c892c0713.json  query-5755708aa509f9797d7321ea46b76b34f9d0fcbaef4a084b2ccf86b5f8dc106c.json  query-57d21276026fcd25943e8b8e8958a43ea7087e4c6c325446550a539fd4759a48.json  query-57fe804f4283bd4f02aaaab44b01751565699c2909840b754f531d088a1e314d.json  query-5ada24bc255333c16ad70c943c52bcef8f3731978bca3b1bfb208e9d9ac6f8c3.json  (+58 more)
data/: aircraft-types-icao-iata.json
docs/: BACKUP-QUICKSTART.md  BEAST-Integration.md  DB-BACKUPS.md  FANET_ID_FORMAT.md  FLIGHT-DETECTION-TESTING.md  OPENAIP_SETUP.md  TRACING.md  adsb-phase-6-cpr-decoder.md  flight-analytics.md  install-photon.sh  packet-flow.md  pelias-deployment.md  photon-deployment.md  photon.service  release-process.md  tokio-tasks.md
grafana/: README.md  soar-dashboard.json
infrastructure/: ADSB-SETUP.md  Caddyfile  Caddyfile.production  Caddyfile.staging  DEPLOYMENT.md  GRAFANA-ALERTING.md  GRAFANA-DATASOURCE-TROUBLESHOOTING.md  GRAFANA-IMPROVEMENTS-COMPLETED.md  GRAFANA-TODO-0-OVERVIEW.md  GRAFANA-TODO-1-ANALYTICS.md  GRAFANA-TODO-2-CODE-CHANGES.md  GRAFANA-TODO-3-DASHBOARD-FIXES.md  GRAFANA-TODO-4-REORGANIZATION.md  MIGRATION-SYSTEM.md  NATS-JETSTREAM-MONITORING.md  OPENTELEMETRY.md  PYROSCOPE.md  STAGING-SETUP.md  adsblol-firehose-proxy.service  alloy-config.alloy  alloy-config.alloy.template  alloy.service  docker-compose.observability.yml  elevation-service.service  grafana-README.md  grafana-dashboard-analytics.json  grafana-dashboard-aprs-ingest.json  grafana-dashboard-beast-ingest.json  grafana-dashboard-coverage.json  grafana-dashboard-deployment.json  grafana-dashboard-ingest-adsb.json  grafana-dashboard-ingest-ogn.json  grafana-dashboard-ingest.json  grafana-dashboard-nats-jetstream.json  grafana-dashboard-nats-jetstream.json.deprecated  grafana-dashboard-nats.json  grafana-dashboard-pull-data.json  grafana-dashboard-run-combined.json  grafana-dashboard-run-core.json  grafana-dashboard-run-elevation.json  (+30 more)
migrations/: 20250828234012_create_devices_table.down.sql  20250828234012_create_devices_table.up.sql  20250829220012_aircraft_registrations.down.sql  20250829220012_aircraft_registrations.up.sql  20250831020539_create_aircraft_model_table.down.sql  (+71 more)
scripts/: README.md  (+40 more)
(+1292 files in other folders)
