[package]
name = "soar"
version = "0.1.2"
edition = "2024"

[dependencies]
anyhow = "1.0"
argon2 = "0.5"
async-nats = "0.44"
bigdecimal = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
axum = { version = "0.8.6", features = ["macros", "ws"] }
axum-extra = { version = "0.10.2", features = ["typed-header"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
dotenvy = { version = "0.15" }
google_maps = { version = "3.8.3", features = [
    "geocoding",
    "elevation",
    "reqwest-rustls-tls",
], default-features = false }
hex = { version = "0.4", features = ["serde"] }
include_dir = "0.7"
jsonwebtoken = { version = "10.0.0", features = ["rust_crypto"] }
lettre = { version = "0.11", features = [
    "tokio1-rustls-tls",
    "smtp-transport",
    "builder",
], default-features = false }
libc = "0.2"
mime_guess = "2.0"
rand = "0.9.2"
num-traits = "0.2"
ogn-parser = { git = "https://github.com/hut8/ogn-parser-rs", branch = "master" }
once_cell = "1.19"
regex = "1.12"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0" }
serde_derive = { version = "1.0" }
serde_json = { version = "1.0" }
diesel = { version = "2.2", features = [
    "postgres",
    "chrono",
    "uuid",
    "serde_json",
    "r2d2",
    "64-column-tables",
    "numeric",
] }
diesel_migrations = "2.2"
diesel-derive-enum = { version = "3.0.0-beta.1", features = ["postgres"] }
r2d2 = "0.8"
tokio = { version = "1.0", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace", "cors"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
zstd = "0.13"
csv = "1.3"
axum-tungstenite = "0.3.0"
futures-util = "0.3.31"
sentry = { version = "0.45.0", features = ["tracing", "logs"] }
postgis_diesel = { version = "3.0.2", features = ["serde", "serde_geojson"] }
rust_decimal = "1.39"
zip = "6"
directories = "6.0.0"
gdal = "0.18.0"
flydent = ">= 0.4"
sitemap-rs = "0.4.0"
metrics = "0.24"
metrics-exporter-prometheus = "0.17"
flarmnet = { version = "0.5.0", features = ["xcsoar"] }

# Optimized development profile with light optimization
# Use with: cargo build --profile dev-fast
[profile.dev-fast]
inherits = "dev"
opt-level = 1              # Light optimization, faster than release
debug = 1                  # Reduced debug info
split-debuginfo = "unpacked"
incremental = true

[profile.release]
# Generate debug symbols for Sentry crash symbolication
# Symbols are stripped from the binary and uploaded separately
debug = 2                  # Full debug info
strip = "symbols"          # Strip symbols from binary
split-debuginfo = "packed" # Keep debug info in separate files
